--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
+    <link href="https://fonts.googleapis.com/css?family=Fira+Sans:400,500,600,700|Roboto:400,500,700,900&amp;subset=cyrillic" rel="stylesheet" />
     <title>etaj</title>
   </head>
   <body>
