--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link rel="mask-icon" href="./static/favicon/safari-pinned-tab.svg" color="#ffa511">
     <meta name="msapplication-TileColor" content="#ffffff">
     <meta name="theme-color" content="#ffffff">
-    <title>Etage</title>
+    <title>Этаж — сервис грузоперевозок</title>
   </head>
   <body>
     <div id="app"></div>
