--- a/index.html
+++ b/index.html
@@ -1,21 +1,106 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <link href="https://fonts.googleapis.com/css?family=Fira+Sans:400,500,600,700,900|Roboto:400,500,700,900&amp;subset=cyrillic" rel="stylesheet" />
-    <link rel="stylesheet" href="https://unpkg.com/vue-multiselect@2.1.0/dist/vue-multiselect.min.css">
-    <link rel="apple-touch-icon" sizes="180x180" href="./static/favicon/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="./static/favicon/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="./static/favicon/favicon-16x16.png">
-    <link rel="manifest" href="./static/favicon/site.webmanifest">
-    <link rel="mask-icon" href="./static/favicon/safari-pinned-tab.svg" color="#ffa511">
-    <meta name="msapplication-TileColor" content="#ffffff">
-    <meta name="theme-color" content="#ffffff">
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width,initial-scale=1.0" />
+    <link
+      href="https://fonts.googleapis.com/css?family=Fira+Sans:400,500,600,700,900|Roboto:400,500,700,900&amp;subset=cyrillic"
+      rel="stylesheet"
+    />
+    <link
+      rel="stylesheet"
+      href="https://unpkg.com/vue-multiselect@2.1.0/dist/vue-multiselect.min.css"
+    />
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="./static/favicon/apple-touch-icon.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="./static/favicon/favicon-32x32.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="./static/favicon/favicon-16x16.png"
+    />
+    <link rel="manifest" href="./static/favicon/site.webmanifest" />
+    <link
+      rel="mask-icon"
+      href="./static/favicon/safari-pinned-tab.svg"
+      color="#ffa511"
+    />
+    <meta name="msapplication-TileColor" content="#ffffff" />
+    <meta name="theme-color" content="#ffffff" />
     <title>Этаж — сервис грузоперевозок</title>
   </head>
   <body>
     <div id="app"></div>
     <!-- built files will be auto injected -->
+    <!-- <script
+      src="//code-ru1.jivosite.com/widget.js"
+      jv-id="hoLVPxu4CZ"
+      async
+    ></script> -->
+
+    <!-- Global site tag (gtag.js) - Google Ads: 732085968 -->
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=AW-732085968"
+    ></script>
+
+    <!-- Google Tag Manager -->
+    <script>
+      (function(w, d, s, l, i) {
+        w[l] = w[l] || [];
+        w[l].push({ "gtm.start": new Date().getTime(), event: "gtm.js" });
+        var f = d.getElementsByTagName(s)[0],
+          j = d.createElement(s),
+          dl = l != "dataLayer" ? "&l=" + l : "";
+        j.async = true;
+        j.src = "https://www.googletagmanager.com/gtm.js?id=" + i + dl;
+        f.parentNode.insertBefore(j, f);
+      })(window, document, "script", "dataLayer", "GTM-N5C6PGH");
+    </script>
+    <!-- End Google Tag Manager -->
+
+    <!-- Google Tag Manager (noscript) -->
+    <noscript
+      ><iframe
+        src="https://www.googletagmanager.com/ns.html?id=GTM-N5C6PGH"
+        height="0"
+        width="0"
+        style="display:none;visibility:hidden"
+      ></iframe
+    ></noscript>
+    <!-- End Google Tag Manager (noscript) -->
+
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
+
+      gtag("config", "AW-732085968");
+    </script>
+
+    <script>
+      (function(w, d, u) {
+        var s = d.createElement("script");
+        s.async = true;
+        s.src = u + "?" + ((Date.now() / 60000) | 0);
+        var h = d.getElementsByTagName("script")[0];
+        h.parentNode.insertBefore(s, h);
+      })(
+        window,
+        document,
+        "https://cdn.bitrix24.ua/b11290531/crm/site_button/loader_1_xeiz0w.js"
+      );
+    </script>
   </body>
 </html>
