fix socials, add sent message

--- a/index.html
+++ b/index.html
@@ -17,5 +17,6 @@
   <body>
     <div id="app"></div>
     <!-- built files will be auto injected -->
+    <script src="//code-ru1.jivosite.com/widget.js" jv-id="hoLVPxu4CZ" async></script>
   </body>
 </html>
